# nef-to-jpg

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  _config.yml  index.md  nef_converter.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  start-gui.bat
.github/: DUAL-LICENSE-PLAN.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/license-templates/: LICENSE-AGPL-TEMPLATE.txt  LICENSE-COMMERCIAL-TEMPLATE.md  LICENSE-NOTICE-TEMPLATE.md  README.md
.github/workflows/: ci.yml
build-scripts/: README.md
photoconverter/: main.py  pgbar.py
src/nef_converter/: __init__.py  cli.py  converter.py  gui.py  main.py  watch.py
tests/: test_converter.py
